// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placement Ordering snapshot renders all default items 1`] = `
<ConfigLayout
  settings={
    <Panel
      configuration={
        Object {
          "choiceLabel": Object {
            "label": "Choice label",
            "settings": true,
          },
          "choices": Object {
            "label": "Choices",
            "settings": true,
          },
          "enableImages": Object {
            "label": "Enable Images",
            "settings": true,
          },
          "feedback": Object {
            "enabled": true,
            "label": "Feedback",
            "settings": true,
          },
          "numberedGuides": Object {
            "label": "Numbered guides",
            "settings": true,
          },
          "orientation": Object {
            "label": "Orientation",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "placementArea": Object {
            "label": "Placement Area",
            "settings": true,
          },
          "prompt": Object {
            "label": "Item Stem",
            "settings": true,
          },
          "rationale": Object {
            "label": "Rationale",
            "settings": true,
          },
          "removeTilesAfterPlacing": Object {
            "label": "Remove Tiles after placing",
            "settings": false,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "targetLabel": Object {
            "label": "Target label",
            "settings": true,
          },
          "teacherInstructions": Object {
            "label": "Teacher Instructions",
            "settings": true,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "scoringType": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "choiceLabelEnabled": undefined,
            "enableImages": undefined,
            "feedbackEnabled": undefined,
            "numberedGuides": false,
            "orientation": undefined,
            "partialScoring": false,
            "placementArea": undefined,
            "removeTilesAfterPlacing": false,
          },
        }
      }
      model={
        Object {
          "choiceLabel": "",
          "choiceLabelEnabled": true,
          "choices": Array [],
          "correctResponse": Array [],
          "enableImages": false,
          "feedbackEnabled": true,
          "numberedGuides": false,
          "orientation": "vertical",
          "partialScoring": true,
          "placementArea": false,
          "prompt": "Item Stem goes here",
          "promptEnabled": true,
          "rationaleEnabled": true,
          "removeTilesAfterPlacing": true,
          "scoringType": "auto",
          "studentInstructionsEnabled": true,
          "targetLabel": "",
          "teacherInstructionsEnabled": true,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <InputContainer
    label="Teacher Instructions"
  >
    <EditableHtml
      markup=""
      nonEmpty={false}
      onChange={[Function]}
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <FormSection
    label="Ordering"
  >
    <InputContainer
      label="ITEM STEM"
    >
      <EditableHtml
        markup="Item Stem goes here"
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </InputContainer>
    <InputContainer
      label="Rationale"
    >
      <EditableHtml
        markup=""
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </InputContainer>
  </FormSection>
  <FormSection
    label="Define Choices"
  >
    <div>
      <InputContainer
        label="CHOICE LABEL"
      >
        <EditableHtml
          markup=""
          onChange={[Function]}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
    <InputContainer
      label="CHOICES"
    >
      <WithStyles(ChoiceEditor)
        choices={Array []}
        correctResponse={Array []}
        disableImages={true}
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </InputContainer>
  </FormSection>
  <FeedbackConfig
    onChange={[Function]}
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</ConfigLayout>
`;

exports[`Placement Ordering snapshot renders custom items 1`] = `
<ConfigLayout
  settings={
    <Panel
      configuration={
        Object {
          "choiceLabel": Object {
            "label": "Choice label",
            "settings": true,
          },
          "choices": Object {
            "label": "Choices",
            "settings": true,
          },
          "enableImages": Object {
            "label": "Enable Images",
            "settings": true,
          },
          "feedback": Object {
            "enabled": true,
            "label": "Feedback",
            "settings": true,
          },
          "numberedGuides": Object {
            "label": "Numbered guides",
            "settings": true,
          },
          "orientation": Object {
            "label": "Orientation",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "placementArea": Object {
            "label": "Placement Area",
            "settings": true,
          },
          "prompt": Object {
            "label": "Item Stem",
            "settings": false,
          },
          "rationale": Object {
            "label": "Rationale",
            "settings": true,
          },
          "removeTilesAfterPlacing": Object {
            "label": "Remove Tiles after placing",
            "settings": true,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "targetLabel": Object {
            "label": "Target label",
            "settings": true,
          },
          "teacherInstructions": Object {
            "label": "Teacher Instructions",
            "settings": true,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": false,
            "rationaleEnabled": undefined,
            "scoringType": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "choiceLabelEnabled": undefined,
            "enableImages": undefined,
            "feedbackEnabled": undefined,
            "numberedGuides": false,
            "orientation": undefined,
            "partialScoring": false,
            "placementArea": undefined,
            "removeTilesAfterPlacing": undefined,
          },
        }
      }
      model={
        Object {
          "choiceLabel": "",
          "choiceLabelEnabled": true,
          "choices": Array [],
          "correctResponse": Array [],
          "enableImages": false,
          "feedbackEnabled": true,
          "numberedGuides": false,
          "orientation": "vertical",
          "partialScoring": true,
          "placementArea": false,
          "prompt": "Item Stem goes here",
          "promptEnabled": true,
          "rationaleEnabled": true,
          "removeTilesAfterPlacing": true,
          "scoringType": "auto",
          "studentInstructionsEnabled": true,
          "targetLabel": "",
          "teacherInstructionsEnabled": true,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <InputContainer
    label="Teacher Instructions"
  >
    <EditableHtml
      markup=""
      nonEmpty={false}
      onChange={[Function]}
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <FormSection
    label="Ordering"
  >
    <InputContainer
      label="ITEM STEM"
    >
      <EditableHtml
        markup="Item Stem goes here"
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </InputContainer>
    <InputContainer
      label="Rationale"
    >
      <EditableHtml
        markup=""
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </InputContainer>
  </FormSection>
  <FormSection
    label="Define Choices"
  >
    <div>
      <InputContainer
        label="CHOICE LABEL"
      >
        <EditableHtml
          markup=""
          onChange={[Function]}
          toolbarOpts={
            Object {
              "position": "bottom",
            }
          }
        />
      </InputContainer>
    </div>
    <InputContainer
      label="CHOICES"
    >
      <WithStyles(ChoiceEditor)
        choices={Array []}
        correctResponse={Array []}
        disableImages={true}
        onChange={[Function]}
        toolbarOpts={
          Object {
            "position": "bottom",
          }
        }
      />
    </InputContainer>
  </FormSection>
  <FeedbackConfig
    onChange={[Function]}
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</ConfigLayout>
`;
